scrollbar fix

--- a/src/app/page.module.css
+++ b/src/app/page.module.css
@@ -307,7 +307,7 @@
 
 .featured_scroll {
   display: flex;
-  /* position: absolute; */
+  position: absolute;
   top: 0;
   bottom: 0;
   right: 0;
